[package]
name = "rs_flow1000_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
ctr = "=0.9.2"
aes = "0.8.4"
hex-literal = "0.4.1"
axum = "0.7.5"
serde_json = "1.0.116"
serde_derive = "=1.0.198"
serde = "1.0.198"
mysql = "=25.0.0"
# sudo dnf install sqlite-devel
rusqlite = "0.31.0"
sysinfo = "0.31.0"
libc = "0.2.0"
