[package]
name = "rs_flow1000_parse"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
ctr = "=0.9.2"
aes = "0.8.4"
hex-literal = "0.4.1"
axum = "0.7.5"
serde_json = "1.0.116"
serde_derive = "=1.0.198"
serde = "1.0.198"
# sudo dnf install sqlite-devel
rusqlite = "0.31.0"
sysinfo = "0.31.0"
libc = "0.2.0"

futures-core="0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.1", features = ["trace"] }
itoa = "1.0.15"

[[bin]]
name="concat_cover"

[[bin]]
name="import_monthly"

[[bin]]
name="cfb_file"

[[bin]]
name="cfb_video_by_id"

[[bin]]
name="key_generation"

[[bin]]
name="parse_meta_info_by_id"